fixed z-index on add-clients

--- a/app/component/our-work/_our-work.scss
+++ b/app/component/our-work/_our-work.scss
@@ -238,6 +238,7 @@
   position: absolute;
   width: 100vw;
   height: 61px;
+  z-index: 3;
   margin-top: 900px;
 }
 #work-add-clients {
